fixing alignment of boolean operator in advanced search

--- a/less/sections/primo-advanced-search.less
+++ b/less/sections/primo-advanced-search.less
@@ -227,7 +227,9 @@
   }
 }
 
-
+.EXLBooleanOperatorInput {
+  margin-top: 8px;
+}
 
 .EXLAdvancedSearchFormDateRangeRow label.EXLHide{
   .sr-only();
